collapse/expand link fix

--- a/app/javascript/stylesheets/_bootstrap-customizations.scss
+++ b/app/javascript/stylesheets/_bootstrap-customizations.scss
@@ -1020,8 +1020,15 @@ h5 {
   }
 }
 
+.collapseall.collapsed::before {
+  content: 'Expand All';
+  display: block;
+}
 
-
+.collapseall::before {
+  content: 'Collapse All';
+  display: block;
+}
 
 @media only screen and (max-width: 768px) {
 
